Resolves: tdf#97331 use VclPtr instead of pointers to avoid crash

Change-Id: Ia653a67046cb2cfb7c96367a7483ddc0cb29819e